assets/css/style.css
/* <<<<<<<<<<<<<<<<<<< GENERAL SETTINGS >>>>>>>>>>>>>>>>>>>>*/

body {
    font-family: 'Roboto Condensed', sans-serif;
    font-size: calc(12px + 0.4vw);
    padding: 0;
    margin: 0;
    position: relative;
    text-align: justify;
}

a {
    text-decoration: none;
    color: #fff;
}

a:hover {
    text-decoration: none;
    color: #fff;
}

html {
    scroll-behavior: smooth;
  }

/*                     ROW HEIGHTS                          */
.row.h60 {
    min-height: 60%;
}
.row.h40 {
    min-height: 40%;
}
.row.h30 {
    min-height: 20%;
}
/*                     ROW HEIGHTS                          */

/*                     FONT SIZE                            */

.autosize-large{
    font-size: calc(14px + 0.75vw);
}

.autosize-normal{
    font-size: calc(12px + 0.4vw);
}
    
.autosize-small{
    font-size: calc(14px + 0.2vw);
}

.autosize-tiny{
    font-size: calc(12px + 0.2vw);
}
/*                     FONT SIZE                            */

/* <<<<<<<<<<<<<<<<<<< GENERAL SETTINGS >>>>>>>>>>>>>>>>>>>>*/

/*                      BACKGROUND                          */

.callout-container {
    min-height: 50vh;
    background: 
     
    linear-gradient(
      rgba(255, 255, 255, 0.25), 
      rgba(255, 255, 255, 0.70)
    ),
    
    url('/assets/img/home-banner4.jpg') no-repeat center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: left;
    justify-content: left;
    z-index: 1;
    position: relative;
    text-align: justify;
    text-justify: inter-word;
}

.callout-container::after {
    background: url('/assets/img/pattern.png') repeat;
    content: "";
    display: flex;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    z-index: -1;
    opacity: 0.4;
}

/*                      BACKGROUND                          */

/*                      NAVIGATION BAR                      */
.skew>li:hover {
    display: inline-block;
    -webkit-transition: background-color 0.3s ease-out;
    -moz-transition: background-color 0.3s ease-out;
    -o-transition: background-color 0.3s ease-out;
    transition: background-color 0.3s ease-out;
    background-color: rgba(255, 255, 255, 0.80);
}

@media screen and (min-width: 992px) {
    .skew>li {
        display: inline-block;
        transition: background 0.5s;
        -moz-transform: skew(-12deg);
        -ms-transform: skew(-12deg);
        -webkit-transform: skew(-12deg);
        -o-transform: skew(-12deg);
        transform: skew(-0deg);
        border-left: 1px solid #af2330;
    }
    .skew>li:hover {
        display: inline-block;
        -webkit-transition: background-color 0.3s ease-out;
        -moz-transition: background-color 0.3s ease-out;
        -o-transition: background-color 0.3s ease-out;
        transition: background-color 0.3s ease-out;
        background-color: rgba(0, 0, 0, .10);
    }
    .skew>li:active {
        display: inline-block;
        -webkit-transition: background-color 0.3s ease-out;
        -moz-transition: background-color 0.3s ease-out;
        -o-transition: background-color 0.3s ease-out;
        transition: background-color 0.3s ease-out;
        background-color: #af2330;
    }
    .skew>li:last-child {
        border-right: 1px solid rgb(184, 13, 50);
    }
    .skew>li:first-child {
        border-left: 0px solid rgb(184, 13, 50);
    }
}



@media screen and (max-width: 991.98px) {
    .skew>li {
        background-color: #f8f9fa;
        border-top: 1px solid #af2330;
    }
    a.navbar-brand {
        margin-left: 15px;
    }
    .navbar-toggler {
        margin-right: 5vw; 
    }
    .skew>li:last-child {
        border-bottom: 1px solid #af2330;
    }
    .navbar-info>li:last-child {
        border-bottom: 1px solid #af2330;
    }
    .navbar-info{
    padding-right: 0px !important;
    }
    .navbar {
        padding: 0;
    }
    .nav-link {
    margin-left: 5vw;
    padding-left: 15px !important;
    }
}

nav .shadow {
    box-shadow: 0 .5rem 1rem 
    rgba(0,0,0,.25) !important;
}
.fit-image {
    height: 80px;
    padding-left: 5vw;
}

.navbar-light .navbar-nav .nav-link {
    color: rgba(0, 0, 0, .6);

}

.navbar-light .navbar-nav .nav-link:hover {
    color: #000;
}

.navbar-light .navbar-nav .nav-link:active {
    color: #fff;
}

.navbar {
    height: 100px;
    z-index: 43;
}


i {
    display: inline-block;
    margin-right: 6px;
}

.nav-link {
    font-size: calc(16px + 0.4vw) ;
}
.navbar-info{
    
    padding-top: 0px !important;
    padding-bottom: 0px !important;
    margin: 0px !important;
    color: rgba(0, 0, 0, .60);
}
.navbar-info .nav-link {
    font-size: calc(10px + 0.5vw) !important;
}
/*                      NAVIGATION BAR                      */

/*                      CONTENT                             */
.home-card {
    opacity: 0.90;
}

.vig-red {
    background-color: #af2330;
    border: 1px solid #af2330;
    opacity: 1;
    color: #fff;
}

.vig-grey {
    background-color: #61565D;
    border: 1px solid #61565D;
    opacity: 0.85;
    color: #fff;
}

.vig-lgrey {
    background-color: #b9b5b5;
    border: 1px solid #b9b5b5;
    opacity: 1;
    color: #fff;
}

.testimonials {
    background-color: #f6f6f6;
    font-size: 0.75em;
}


/*                      CONTENT                             */

/*                      FOOTER                              */

.footer {
    min-height: 230px;
    margin: 0;
    padding: 0;
    background-color: #61565D;
    color: #fff;
    position: relative;
}

.footer p {
    margin-top: 0;
    margin-bottom: 0.2em;
}

.footer div {
    position: relative;
}

.footer-styling {
    padding: 20px;
}

.social-links {
    align-items: center;
    padding-bottom: 1em;
}

.social-links a {
    color: #fff;
    font-size: 22px;
    padding: 5px;
    font-size: x-large;
}

.map-responsive iframe {
    border: 0;
    left: 0;
    position: relative;
    top: 0;
    width: 100%;
    height: 460px;

}

label {
    color: #fff
}

.company-details {
    padding-left: 20px;
}

ul {
    padding-inline-start: 0px;
}
.footer-links {
    padding-right: 10px;
}

.copyright {
    background-color: #61565D;
    color: #fff;
    padding-left: 20px;
}

.form-check-label{
    color: #fff;
}


/*                      FOOTER                              */



/*                      ANIMATIONS                          */
/*                      FOOTER                              */
/*                      HEADER                              */
/*                      BACKGROUND                          */
/*                                                          */


@media (min-width: 991.98px){
    .mid-testimonial-card {
        padding-left: 0;
        padding-right: 0;
      }
      .copyright{
        margin-top: 2em;
    }
    
}
.bantext {
    position: absolute;
    top: 30%;
    left: 30%;
    transform: translate(-50%, -50%);
    font-size: calc(16px + 2vw);
    margin: 0em 0em;
    color: rgba(0, 0, 0, .60);
    text-align: left;
  }


@media (min-width: 300px) and (max-width: 767px) {

    .footer {
        height: auto;
    }
     .services-title::after {
        background: url('/assets/img/pattern.png') repeat;
        content: "";
        display: flex;
        position: absolute;
        top: 0px;
        left: 0px;
        width: 100%;
        height: 100%;
        z-index: 1;
        opacity: 0.4;
    }
    .small-tile{
        min-height: 250px;
        max-width: 500px;
    }
    .tile-text-wrap{
        padding-top: 2rem;
        margin-bottom: 2rem;
    }
}


@media (min-width: 150px) and (max-width: 991.98px) {
    .map-responsive iframe{
        overflow: hidden;
        position: relative;
        height: 300px;
    }
    .bantext {
        position: absolute;
        top: 66%;
        left: 50%;
        transform: translate(-50%, -50%);
        font-size: calc(16px + 3.75vw);
        margin: 0em 0em;
        text-align: center;
        color: rgba(0, 0, 0, .60);
      }
}

.break {
    display: none;
}

@media (min-width: 323px) and (max-width: 424px) {
    .break {
        display: inline-block;
    }
}

.accreditations img{
    max-width: 100%;
    margin-bottom: 15px;
    max-height: 100px;
}

.get-quote {
    min-height: 60px;
    font-size: 1.5em;
    padding: 20px 10px;
    
}

.get-quote p{
    margin-bottom: 0;
}

.get-quote .btn-lg{
    margin-left: 10px;
}

.ban img{
    width: 100%;
}

/*              services                 */

.services-title{
    background-color: #fff;
    letter-spacing: 0.5rem;
    padding: 2rem 0rem;
    width: 100%;
    font-size: calc(32px + 1vmin);
    font-weight: 900;
   
}

.services-title p{
margin-bottom: 0.25rem;
}

.undertitle2p{
    background-color: #000000;
    height: 2px;
}

.undertitle2p-w{
    background-color: #fff;
    height: 2px;
}

.undertitle1p{
    background-color: #000000;
    height: 1px;
    margin-top: 2px;
}

#home-content{
    background: 
         
        linear-gradient(
          rgba(255, 255, 255, 0.70), 
          rgba(255, 255, 255, 0.80)
        ), 
        
        url('/assets/img/Services/grey-chevron-stripes-patterns-rot180.png') repeat center;
        -webkit-background-size: auto;
        -moz-background-size: auto;
        -o-background-size: auto;
        background-size: auto;
        width: 100%;
}

#business-content{
    background: 
         
        linear-gradient(
            rgba(255, 255, 255, 0.80), 
            rgba(255, 255, 255, 0.70)
        ),
        url('/assets/img/Services/grey-chevron-stripes-patterns-3.png') repeat center;
        -webkit-background-size: auto;
        -moz-background-size: auto;
        -o-background-size: auto;
        background-size: auto;
        width: 100%;
}

.home-content{
    padding-left: 0;
    padding-right: 0;
}

.business-content{
    padding-left: 0;
    padding-right: 0;
}

.main-tile-container{     
    min-height: 100%;
    width: 100%;
    padding: 0;
    
}
    
.small-tile-container{
    position: relative;  
    padding: 0 !important;  
    min-height: 50vh;
    width: 100%;
    
}
.main-tile{
    background-color: white;
    opacity: 0.85;
    min-height: auto;
    width: 100%;
}
.small-tile{    
    height: auto;
    width: 100%;
    padding: auto;
    margin: auto;
        
}

.small-tile img{
    object-fit:cover;  
}

.bottom-right {
    position: absolute;
    bottom: 8px;
    right: 16px;
  }
  
.tile-label{
    padding-top: 0em;
    padding-bottom: 1rem;
    margin: 0;
    font-weight: 600;
}

.tile-text{
    padding: 0 2em;
    text-align: justify;
    
    font-size: calc(12px + 0.2vw);
}

.isdisabled {
    cursor: not-allowed;
    opacity: 0.5;
    white-space: nowrap;
  }
  .isdisabled > a {
    color: currentColor;
    display: inline-block;  /* For IE11/ MS Edge bug */
    pointer-events: none;
    text-decoration: none;
  }

